<resources>
    <string name="app_name">FitZone Admin</string>


    //admin login
    <string name="welcom_admin">Welcome back Admin,</string>
    <string name="admin_welcome_back_discreiption">Ready to work now.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="fitzone">FitZone</string>
    <string name="dashbord">DashBord</string>
    <string name="user">Users</string>
    <string name="trainer">Trainer</string>
    <string name="workout">Workout</string>
    <string name="diet">Diet</string>
    <string name="gym_members">Gym Members</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone NUmber</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="client_data">Client Data</string>
    <string name="trainer_data">Trainer Data</string>
    <string name="description">Description</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="add_new_diet">Add New Diet</string>
    <string name="update_data">Update Data</string>
    <string name="workout_name">Workout name</string>
    <string name="workout_image">Workout Image</string>
    <string name="submit">Submit</string>

</resources>