<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserData"
    android:background="@color/dark_blue">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_arrow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn_next_page"
            android:layout_marginStart="-1dp"
            android:fontFamily="@font/patuaone_regular"
            android:paddingTop="10dp"
            android:text="@string/client_data"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:gravity="center"
            android:text="Name"
            android:textSize="45dp"
            android:textColor="@color/black"
            android:fontFamily="@font/patuaone_regular"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            >

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical"
                android:paddingBottom="50dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="22dp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="Phone Number"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="5dp"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical"
                android:paddingBottom="50dp"
                android:gravity="start"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintStart_toEndOf="@+id/linearLayout4">

                <TextView
                    android:id="@+id/uEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginVertical="5dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="22dp"

                    />

                <TextView
                    android:id="@+id/uAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/uGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/uPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="Phone Number"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/uHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/uWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/btn_Delete"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/button2"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uimage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@color/white"
        android:layout_marginBottom="-125dp"
        app:civ_border_color="@color/moderate_cyan"
        app:civ_border_width="7dp"
        app:layout_constraintBottom_toTopOf="@+id/drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>