<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutEdit"
    android:background="@color/dark_blue">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_arrow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn_next_page"
            android:layout_marginStart="-1dp"
            android:fontFamily="@font/patuaone_regular"
            android:paddingTop="10dp"
            android:text="@string/update_data"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/drawer"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_name"
                android:textSize="25dp"
                android:fontFamily="@font/patuaone_regular"
                android:textColor="@color/black"/>
            <EditText
            android:id="@+id/change_work_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox1"
            android:hint="Change workout name"
            android:inputType="text"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color"
            tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_image"
                android:textSize="25dp"
                android:fontFamily="@font/patuaone_regular"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/change_work_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@color/white"
                android:scaleType="centerCrop"/>

            <Button
                android:id="@+id/btn_change_work_image"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button1"
                android:text="import"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/patuaone_regular"
                android:text="Focus Area"
                android:textColor="@color/black"
                android:textSize="25dp"
                />
            <EditText
                android:id="@+id/change_focus_area"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox1"
                android:hint="Change focus area"
                android:inputType="text"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patuaone_regular"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="25dp" />
            <EditText
                android:id="@+id/change_workout_desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox1"
                android:inputType="textMultiLine"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_work_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button1"
            android:elevation="10dp"
            android:fontFamily="@font/robotoslab_regular"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="26sp"
            android:textStyle="bold"
            android:transformPivotX="3dp"
            android:transformPivotY="5dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>




</RelativeLayout>