<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".WorkoutList"
    android:id="@+id/drawer_layout"
    android:background="@color/dark_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/round_menu_24"
                android:foregroundGravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-1dp"
                android:fontFamily="@font/patuaone_regular"
                android:paddingTop="10dp"
                android:text="@string/workout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:elevation="7dp"

            >

            <TextView
                android:id="@+id/add_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_workout"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:drawableLeft="@drawable/baseline_add_24"
                android:drawablePadding="10dp"
                android:layout_marginStart="35dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_alignParentBottom="@+id/serach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/drawer"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout"
                android:textSize="35sp"
                android:fontFamily="@font/patuaone_regular"
                android:textColor="@color/black"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="30dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/work_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_marginTop="10dp"
                android:fadingEdge="vertical"
                android:elevation="10dp"
                android:onClick="onClickRv"
                />

        </LinearLayout>
        <Button
            android:id="@+id/btn_Update"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button1"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>

</RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/admin_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>